[package]
name = "dota-memory-test"
version = "0.1.0"
authors = ["Oleg Loutchansky <luchansodev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "tlhelp32", "memoryapi"] }


[dependencies]
winapi = "0.3.8"
wio = "0.2.2"
